fixed broken style and added word break

--- a/src/shell/components/global-account-menu/styles.less
+++ b/src/shell/components/global-account-menu/styles.less
@@ -20,7 +20,7 @@
   }
 
   .icon {
-    60vwmargin-right: 0.5rem;
+    // 60vwmargin-right: 0.5rem;
   }
 
   .user {
@@ -37,6 +37,9 @@
       display: flex;
       flex-direction: column;
     }
+  }
+  .subheadline {
+    word-break: break-word;
   }
 
   .siteSelector {
